web-infras/parser/tests/fixtures/esprima/ES6/program/module/invalid-delete/output.txt
[SyntaxError]: applying the 'delete' operator to an unqualified name is deprecated (2,1)
2|delete x;
 |^
